Media queries para dispositivos moviles Inicio
Por fin me quedaron mas o menos los media queries.
Ha sido un poco mas dificil de lo que esperaba.

--- a/saludconciencia/public/index.html
+++ b/saludconciencia/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="description"
       content="Salud Conciencia, ¡salud para todos!"
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--FUENTES-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
