--- a/saludconciencia/public/index.html
+++ b/saludconciencia/public/index.html
@@ -5,10 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <meta
-      name="description"
-      content="Salud Conciencia, ¡salud para todos!"
-    /> -->
+    
+    <!-- OG Tags -->
+    <meta property="og:locale" content="es_LA" />
+    <!-- <meta property="og:url" content={url} /> -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Salud Conciencia" />
+    <meta property="og:description" content="Tu salud en un solo lugar. Articulos, podcast, entrenamientos y más." />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/saludconciencia-53c0a.appspot.com/o/social_media%2Ffacebook%2Fbanner_card_sm.jpg?alt=media&token=5839bbaf-1d41-40bc-8964-75227283c4d7" />
+    <meta property="og:site_name" content="Salud Conciencia" />
+    <meta property="og:image:width" content="640" />
+    <meta property="og:image:height" content="480" />
+    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--FUENTES-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
