--- a/saludconciencia/public/index.html
+++ b/saludconciencia/public/index.html
@@ -9,19 +9,34 @@
     <!-- OG Tags -->
     <meta property="og:locale" content="es_LA" />
     <!-- <meta property="og:url" content={url} /> -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@EjercicioCien" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Salud Conciencia" />
     <meta property="og:description" content="Tu salud en un solo lugar. Articulos, podcast, entrenamientos y más." />
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/saludconciencia-53c0a.appspot.com/o/social_media%2Ffacebook%2Fbanner_card_sm.jpg?alt=media&token=5839bbaf-1d41-40bc-8964-75227283c4d7" />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/saludconciencia-53c0a.appspot.com/o/social_media%2Ffacebook%2Fbanner_card_sm-fb.jpg?alt=media&token=49e46c0f-d94c-4c6d-9b15-4932dd0ae6fd" />
     <meta property="og:site_name" content="Salud Conciencia" />
-    <meta property="og:image:width" content="640" />
-    <meta property="og:image:height" content="480" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--FUENTES-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- 
+      Poppins
+      300 Light
+      400 Regular
+      500 Medium
+      600 Semi-bold
+
+      Lexend
+      300 Light
+      400 Regular
+      600 Semi-bold
+      700 Bold
+    -->
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
